Stream base